@@ -63,6 +63,9 @@ const char* CPP_TEXTONLY_IF0_FLAG_SHORT = "";
 const char* EXPRESSION_MODE_FLAG = "--expression";
 const char* EXPRESSION_MODE_FLAG_SHORT = "-e";
 
+const char* SELF_VERSION_FLAG = "--self-version";
+const char* SELF_VERSION_FLAG_SHORT = "";
+
 #ifdef LIBXML_ENABLED
 const char* DEFAULT_XML_ENCODING = "UTF-8";
 #else
@@ -122,6 +125,8 @@ void output_help(const char* name) {
 	      << "set the filename attribute to FILE\n"
 	      << "  " << SRCVERSION_FLAG_SHORT  << ", " << setw(COL) <<  SRCVERSION_FLAG_FULL
 	      << "set the version attribute to VER\n"
+	      << "  " << SELF_VERSION_FLAG <<  "  " << "        "
+	      << "set the version attribute to the src2srcml version\n"
 	      << "  " << ENCODING_FLAG_SHORT    << ", " << setw(COL) <<  ENCODING_FLAG_FULL
 	      << "set the output XML encoding to ENC (default:  "
 	      << DEFAULT_XML_ENCODING << ") \n"
@@ -247,6 +252,11 @@ int main(int argc, char* argv[]) {
   if (isoption(options, OPTION_PVERSION)) {
     output_version(NAME);
     exit(STATUS_SUCCESS);
+  }
+
+  // setup self-versioning
+  if (isoption(options, OPTION_SELF_VERSION)) {
+    given_version = version();
   }
 
   /* Special checks for illegal combinations */
@@ -480,6 +490,13 @@ int process_args(int argc, char* argv[]) {
       options |= OPTION_PVERSION;
       if (position == original_position) ++curarg;
     }
+
+    // version mode
+    else if (compare_flags(argv[curarg], SELF_VERSION_FLAG, SELF_VERSION_FLAG_SHORT, position)) {
+      options |= OPTION_SELF_VERSION;
+      if (position == original_position) ++curarg;
+    }
+
     // debug mode
     else if (compare_flags(argv[curarg], DEBUG_FLAG, DEBUG_FLAG_SHORT, position)) {
       options |= OPTION_DEBUG;
