@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	New option to self version according to the src2srcml version.
+
 	Markup function header incrementally.
 
 	Add post-parsing grammar rule for cleanup.
